@@ -5,6 +5,9 @@ Next Release
 - In rare circumstances, ZODB can legitimately commit an object twice in a
   single transaction.  Fixed RelStorage to accept that.
 
+- Auto reconnect to Oracle sometimes did not work because cx_Oracle was
+  raising a different kind of exception than expected.  Fixed.
+
 
 Version 1.1.2 (2009-01-27)
 --------------------------
